Mas codigo del juego

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,10 @@
-org.gradle.daemon=false
-org.gradle.jvmargs=-Xms512M -Xmx1G -Dfile.encoding=UTF-8 -Dconsole.encoding=UTF-8
-org.gradle.configureondemand=false
+# Configuraciones del Gradle
+org.gradle.daemon=true                   # Mejora velocidad en builds consecutivos
+org.gradle.jvmargs=-Xms512M -Xmx2048M -Dfile.encoding=UTF-8 -Dconsole.encoding=UTF-8
+org.gradle.configureondemand=true        # Solo configura proyectos necesarios
+
+# Versiones de dependencias
+gdxVersion=1.13.1
 lmlVersion=1.10.1.12.1
 visUiVersion=1.5.5
 gdxControllersVersion=2.2.3
@@ -17,8 +21,11 @@ guacamoleVersion=v0.3.5
 screenManagerVersion=0.7.0
 utilsBox2dVersion=0.13.7
 utilsVersion=0.13.7
+
+# Android flags
 android.useAndroidX=true
 android.enableR8.fullMode=false
 enableGraalNative=false
-gdxVersion=1.13.1
+
+# Versión del proyecto
 projectVersion=1.0.0
