--- a/core/build.gradle
+++ b/core/build.gradle
@@ -2,32 +2,41 @@
 eclipse.project.name = appName + '-core'
 
 dependencies {
-  api "com.badlogicgames.ashley:ashley:$ashleyVersion"
-  api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
-  api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
-  api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
+
+  api "com.badlogicgames.gdx:gdx:$gdxVersion"
   api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
   api "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
-  api "com.badlogicgames.gdx:gdx:$gdxVersion"
-  api "com.crashinvaders.lml:gdx-autumn-mvc:$lmlVersion"
-  api "com.crashinvaders.lml:gdx-autumn:$lmlVersion"
-  api "com.crashinvaders.lml:gdx-kiwi:$lmlVersion"
-  api "com.crashinvaders.lml:gdx-lml-vis:$lmlVersion"
+
+  api "com.badlogicgames.gdx-controllers:gdx-controllers-core:$gdxControllersVersion"
+
+  // Opción B: Solo la librería avanzada (comentada por ahora)
+  // api "de.golfgl.gdxcontrollerutils:gdx-controllers-advanced:$controllerUtilsVersion"
+
+  api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
+
+  api "com.badlogicgames.ashley:ashley:$ashleyVersion"
+  api "com.badlogicgames.box2dlights:box2dlights:$box2dlightsVersion"
+  api "net.onedaybeard.artemis:artemis-odb:$artemisOdbVersion"
+
   api "com.crashinvaders.lml:gdx-lml:$lmlVersion"
+  api "com.crashinvaders.lml:gdx-lml-vis:$lmlVersion"
+  api "com.crashinvaders.lml:gdx-autumn:$lmlVersion"
+  api "com.crashinvaders.lml:gdx-autumn-mvc:$lmlVersion"
+  api "com.crashinvaders.lml:gdx-kiwi:$lmlVersion"
+
+  api "com.kotcrab.vis:vis-ui:$visUiVersion"
   api "com.github.crykn.guacamole:core:$guacamoleVersion"
   api "com.github.crykn.guacamole:gdx:$guacamoleVersion"
   api "com.github.crykn:libgdx-screenmanager:$screenManagerVersion"
   api "com.github.tommyettinger:anim8-gdx:$anim8Version"
   api "com.github.tommyettinger:colorful:$colorfulVersion"
-  api "com.github.tommyettinger:libgdx-utils-box2d:$utilsBox2dVersion"
   api "com.github.tommyettinger:libgdx-utils:$utilsVersion"
-  api "com.kotcrab.vis:vis-ui:$visUiVersion"
-  api "de.golfgl.gdxcontrollerutils:gdx-controllers-advanced:$controllerUtilsVersion"
+  api "com.github.tommyettinger:libgdx-utils-box2d:$utilsBox2dVersion"
+
   api "de.golfgl.gdxcontrollerutils:gdx-controllerutils-mapping:$controllerMappingVersion"
   api "de.golfgl.gdxcontrollerutils:gdx-controllerutils-scene2d:$controllerScene2DVersion"
-  api "net.onedaybeard.artemis:artemis-odb:$artemisOdbVersion"
 
-  if(enableGraalNative == 'true') {
+  if (enableGraalNative == 'true') {
     implementation "io.github.berstanio:gdx-svmhelper-annotations:$graalHelperVersion"
   }
 }
